# OvertureMapsDownloader

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile copy  LICENSE  README.md  config.yml  docker-compose.yml  duckdb_install.sh  pyproject.toml
.github/workflows/: deploy-react-app.yml  docker-build-push-2.yml  docker-build-push.yml  poetry-pypi.yml
app/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
app/context/: Database.jsx
app/services/: duckdb.js  wkbToGeoJsonService.js
app/src/: AceEditorComponent.jsx  App.jsx  DuckDBComponent.jsx  MapComponent.jsx  index.css
assets/: index-0d6212fd.css  index.es-5f008034.js
examples/: bbox.geojson  dask.ipynb  dask_2.ipynb  duckdb.ipynb  duckdb_2.ipynb  duckdb_5.ipynb
overturemapsdownloader/: __init__.py  config.py  dask_qrys.py  main.py  om_logic.py  omdownloader_dask.py  read_om_schemas.py  utils.py  utils_helper.py  yaml_helper.py
