[tool.poetry]
name = "overturemapsdownloader"
version = "0.1.1"
description = ""
authors = ["Youssef-Harby <me@youssefharby.com>"]
readme = "README.md"

[tool.poetry.scripts]
OMDownloader = "overturemapsdownloader.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
jupyter = "^1.0.0"
dask-geopandas = "^0.3.1"
pyarrow = "^13.0.0"
adlfs = "^2023.8.0"
duckdb = "0.8.2.dev4142"
geopandas = "^0.13.2"
shapely = "^2.0.1"
gdal = "^3.7.1.1"
fiona = "^1.9.4.post1"
fastparquet = "^2023.8.0"
s3fs = "^2023.9.0"
dask = {extras = ["complete"], version = "^2023.9.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
include = ["config.yml"]

[virtualenvs]
create = true
in-project = true