[tool.poetry]
name = "overturemapsdownloader"
version = "0.1.7"
description = "Overture Maps Downloader simplifies geospatial data manipulation"
authors = ["Youssef-Harby <me@youssefharby.com>"]
readme = "README.md"
include = ["config.yml"]

[tool.poetry.scripts]
OMDownloader = "overturemapsdownloader.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
jupyter = "^1.0.0"
dask-geopandas = "^0.3.1"
pyarrow = "^15.0.0"
adlfs = "^2024.2.0"
duckdb = "^0.10.0"
geopandas = "^0.14.3"
shapely = "^2.0.3"
gdal = {version = "^3.8.4", optional = true}
fiona = "^1.9.5"
fastparquet = "^2024.2.0"
s3fs = "^2024.2.0"
dask = {extras = ["complete"], version = "^2024.2.0"}

[tool.poetry.extras]
gdal_support = ["gdal"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true