[tool.poetry]
name = "overturemapsdownloader"
version = "0.1.9"
description = "Overture Maps Downloader simplifies geospatial data manipulation"
authors = ["Youssef-Harby <me@youssefharby.com>"]
readme = "README.md"
include = ["config.yml"]

[tool.poetry.scripts]
OMDownloader = "overturemapsdownloader.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.12.3"}
jupyter = "^1.0.0"
dask-geopandas = "^0.3.1"
pyarrow = "^15.0.2"
adlfs = "^2024.4.0"
duckdb = "^0.10.1"
geopandas = "^0.14.3"
shapely = "^2.0.4"
gdal = "3.8.5"
fiona = "^1.9.6"
fastparquet = "^2024.2.0"
s3fs = "^2024.3.1"
dask = {extras = ["complete", "dataframe"], version = "^2024.4.1"}
pyproj = "^3.6.1"

[tool.poetry.extras]
gdal_support = ["gdal"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true